welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot: error: Unit does not take parameters
	    growFlowers();
                       ^FlowerPot:2: error: Unit does not take parameters
  growFlowers()
             ^FlowerPot:43: error: too many arguments for method droite: ()Unit
  droite(2)
        ^FlowerPot:1: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime1.FlowerPot'
override def run() {
             ^